crew.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
    2. Remove default margin
  */
* {
  margin: 0;
}
/*
    3. Allow percentage-based heights in the application
  */
html,
body {
  height: 100%;
}
/*
    Typographic tweaks!
    4. Add accessible line-height
    5. Improve text rendering
  */
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
    6. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
    7. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}
/*
    8. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
    9. Create a root stacking context
  */
#root,
#__next {
  isolation: isolate;
}

:root {
  /*
      COLORS
      */
  --color-black: #0b0d17;
  --color-purple: #d0d6f9;
  --color-white: #ffffff;

  /*
      FONTS
      */
  --ff-bellefair: "Bellefair", serif;
  --ff-barlow: "Barlow Condensed", sans-serif;
}

body {
  background-image: url(./assets/crew/background-crew-mobile.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-color: #0c0e17;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 36px 24px;
  height: 6rem;
}

nav {
  display: flex;
  flex-direction: column;
  background: hsla(0, 0, 100, 4%);
  position: absolute;
  top: 0;
  right: 0;
  height: 100vh;
  width: 75%;
  -webkit-backdrop-filter: blur(80px);
  backdrop-filter: blur(80px);
  padding-top: 8rem;
  z-index: 99999;
  visibility: hidden;
}

.active {
  display: block;
  transform: translateX(0);
  transition: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
  visibility: visible;
}

nav ul li {
  list-style: none;
}
nav ul li a {
  text-decoration: none;
  color: var(--color-white);
  font-family: var(--ff-barlow);
  font-size: 1rem;
  text-transform: uppercase;
  letter-spacing: 2.7px;
}

nav ul {
  padding-left: 2rem;
  margin-bottom: 2rem;
}

.number {
  margin-right: 0.8rem;
  font-weight: bold;
  font-family: var(--ff-barlow);
  font-size: 1rem;
  letter-spacing: 2.7px;
}

.hamburger-menu {
  cursor: pointer;
  position: absolute;
  right: 24px;
}

.close-icon {
  display: none;
  cursor: pointer;
  z-index: 999999;
}

.show {
  display: flex;
  z-index: 999999;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  width: 327px;
}

.content-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.crew-image img {
  height: 222px;
  width: auto;
}

.crew-image {
  margin-top: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid rgba(128, 128, 128, 0.356);
  width: 100%;
}

.title span {
  color: rgba(255, 255, 255, 0.253);
  font-family: var(--ff-barlow);
  font-size: 1rem;
  font-weight: bold;
  --letter-spacing: 2.7px;
  letter-spacing: var(--letter-spacing);
  margin-right: 1rem;
}

.title p {
  color: var(--color-white);
  font-family: var(--ff-barlow);
  font-size: 1rem;
  font-weight: 400;
  --letter-spacing: 2.7px;
  letter-spacing: var(--letter-spacing);
  text-transform: uppercase;
}

.circle-buttons {
  display: flex;
  align-items: center;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: 1rem;
  margin-top: 2rem;
}
.circle-buttons li a {
  display: block;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  text-align: center;
  text-decoration: none;
  background-color: grey;
  line-height: 15px;
}
.circle-buttons li a.active-circle {
  background-color: white;
}

.primary-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2rem auto;
}
h2 {
  font-size: 1rem;
  font-family: var(--ff-bellefair);
  color: rgba(255, 255, 255, 0.5);
  text-transform: uppercase;
}

h1 {
  font-size: 24px;
  font-family: var(--ff-bellefair);
  color: var(--color-white);
  text-transform: uppercase;
  font-weight: 400;
}

.primary-content p {
  text-align: center;
  font-size: 15px;
  line-height: 25px;
  color: var(--color-purple);
  padding: 0 3rem;
  margin-top: 0.75rem;
}

#commander {
  width: 444px;
}

@media (min-width: 768px) {
  body {
    background-image: url(./assets/crew/background-crew-tablet.jpg) no-repeat;
  }
  header {
    padding: 36px 40px;
    height: 6rem;
  }

  nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    transform: translateX(0);
    flex-direction: row;
    position: absolute;
    transition: none;
    height: 6rem;
    top: 0;
    padding: 0 40px;
    gap: 2.5rem;
    line-height: 6rem;
    width: auto;
    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(70px);
    opacity: 1;
    visibility: visible;
  }

  nav ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
    padding: 0;
  }

  nav ul li a {
    text-decoration: none;
    color: var(--color-white);
    font-family: var(--ff-barlow);
    font-size: 0.875rem;
    text-transform: uppercase;
    letter-spacing: 2.7px;
  }

  nav ul li a.active-link {
    border-bottom: 3px solid white;
    padding-bottom: 2.3rem;
  }

  .hamburger-menu {
    display: none;
  }

  .number {
    display: none;
  }

  .title {
    order: 1;
    margin-top: 2.5rem;
    border-bottom: none;
  }

  .title span {
    font-size: 1.25rem;
    letter-spacing: 3.38px;
  }

  .title p {
    font-size: 1.25rem;
    letter-spacing: 3.38px;
    position: absolute;
    left: 40px;
  }

  main:not(.title) {
    display: flex;
    flex-direction: column-reverse;
  }
  .circle-buttons {
    align-content: flex-end;
    justify-content: flex-end;
    order: 3;
  }

  .content-row {
    display: flex;
    flex-direction: column-reverse;
  }

  .primary-content {
    margin-top: 4.75rem;
  }

  h1 {
    font-size: 2.5rem;
  }

  h2 {
    font-size: 1.5rem;
  }

  .primary-content p {
    font-size: 1rem;
    width: 670px;
    line-height: 28px;
  }

  .circle-buttons {
    margin: 2rem 0;
  }

  .crew-image {
    border-bottom: none;
  }

  .crew-image img {
    width: 400px;
    height: 500px;
  }

  #commander {
    width: 670px;
  }
}

@media (min-width: 1024px) {
  body {
    background-image: url(./assets/crew/background-crew-desktop.jpg);
    background-color: #0c0e17;
  }

  header {
    padding: 4rem 0 4rem 4rem;
    height: 6rem;
  }

  nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    transform: translateX(0);
    flex-direction: row;
    position: static;
    transition: none;
    height: 6rem;
    top: 0;
    padding: 0 4rem;
    gap: 6rem;
    backdrop-filter: blur(20px);
    opacity: 1;
    visibility: visible;
  }

  .number {
    display: inline-block;
  }

  nav ul li a {
    font-size: 1rem;
  }

  main {
    align-items: flex-start;
    justify-content: start;
    flex-direction: row;
    padding: 0;
    height: 100%;
  }

  .title {
    margin: 4rem 9rem 0;
    border-bottom: none;
    align-items: flex-start;
  }

  .title span {
    font-size: 1.75rem;
    letter-spacing: 4.72px;
  }

  .title p {
    font-size: 1.75rem;
    letter-spacing: 4.72px;
    position: static;
  }

  .primary-content {
    align-items: start;
    margin: 0;
  }

  h1 {
    font-size: 3.5rem;
  }

  .primary-content p {
    font-size: 18px;
    text-align: left;
    width: 100%;
    padding: 0;
    line-height: 32px;
    max-width: 470px;
  }

  .circle-buttons {
    align-items: flex-start;
    justify-content: flex-start;
    order: 3;
    margin-top: 4rem;
  }

  .crew-image {
    align-items: center;
    margin: 0;
    width: auto;
    border-bottom: none;
  }

  .content-wrapper {
    flex-direction: column;
    align-items: flex-start;
    margin: 0;
  }

  .content-row {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    flex-direction: row-reverse;
    width: 100%;
    padding: 0 9rem;
    gap: 1rem;
  }
}

